task第二次修复